--- a/etc/pdclient.conf
+++ b/etc/pdclient.conf
@@ -1,26 +1,155 @@
+############### set some groups  ###################
+## default group
+[default]
+SVN_URL =  'http://172.24.23.246:81/svn/PowerCenter/PowerCenter/branches/dev/PD-SRC-Dev2.5.4/scripts'
+
+## set getinfo group
 [getinfo]
-host='172.24.23.38'@padmin
-vg='172.24.23.38'#padmin#rootvg
-vm_v2.0='172.24.23.38'#padmin
+host = '172.24.23.38'#padmin
 
+pv  = 
+pv_v2.0  = 
+
+vg = '172.24.23.38'#padmin#rootvg
+vg_v2.0 =  
+
+vm =  
+vm_v2.0 = '172.24.23.38'#padmin
+vm_state = 
+vm_net_topology  =
+
+tmp =  
+tmp_v2.0  =
+
+vios =  
+vios_passwort  = 
+
+lu_map =
+
+
+## set cratevm group
+[createvm]
+
+## set ivmcreate group
 [ivmcreate]
-vm_iso='172.24.23.38|padmin|VM1|shared|0.1|0.1|0.1|1|1|1|1024|1024|1024|uncap|/template|RedHat_6.4_iso|1'#'lv,size:rootvg,4096'#'1'#'172.24.23.39|root|pd25|/template/'
-vm_iso='172.24.23.38|padmin|VM1|shared|0.1|0.1|0.1|1|1|1|1024|1024|1024|uncap|/template|RedHat_6.4_iso|1'
+vm_iso = '172.24.23.38|padmin|VM1|shared|0.1|0.1|0.1|1|1|1|1024|1024|1024|uncap|/template|RedHat_6.4_iso|1'#'lv,size:rootvg,4096'#'1'#'172.24.23.39|root|pd25|/template/'
+vm_iso = '172.24.23.38|padmin|VM2|shared|0.1|0.1|0.1|1|1|1|1024|1024|1024|uncap|/template|RedHat_6.4_iso|1'#'lv,size:rootvg,4096'#'1'#'172.24.23.39|root|pd25|/template/'
+vm_iso = '172.24.23.38|padmin|VM3|shared|0.1|0.1|0.1|1|1|1|1024|1024|1024|uncap|/template|RedHat_6.4_iso|1'#'lv,size:rootvg,4096'#'1'#'172.24.23.39|root|pd25|/template/'
 
 
+################# set client dir ##################### 
+## set npiv dir
+[npiv]
+get_fc_info =
+vm_add_vfc =
+vm_del_vfc =
+vm_mapping_vfc =
 
 
+## set powerLinux dir
+[powerLinux]
+mount_nfs =
+unmount_nfs =
+ 
+## set softWareInstall  dir
+[softWareInstall]
+backup_server_xml =
+ 
+create_server =
+delete_server =
+
+get_liberty_state =
+get_server_xml_info =
+get_software_info =
+get_vm_os_info =
+
+install_ae =
+install_agent =
+install_dlpar =
+install_liberty =
+install_software =
+ 
+start_liberty =
+stop_liberty =
+ 
+deploy_liberty_apps =
+undeploy_liberty_apps =
+ 
+uninstall_ae =
+uninstall_agent =
+uninstall_dlpar =
+uninstall_liberty =
+uninstall_software =
+ 
+upload_server_xml =
+ 
+## set ssp dir
+[ssp]
+alter_add_disk =
+alter_add_node =
+alter_lu =
+ 
+rm_node =
+
+create_cluster =
+create_lu =
+ 
+get_info_less =
+get_info =
+ 
+rm_lu =
+
+## set netmgr dir
+[netmgr]
+create_ethernet_channel =
+create_sea =
+create_virtual_eth =
+delete_ethernet_channel =
+delete_sea =
+delete_virtual_eth =
+modify_ethernet_channel =
+modify_sea =
+modify_virtual_eth =
+net_manager_refresh_new =
+net_manager_refresh =
+sea =
+
+## set SVCstorage dir
+[SVCstorage]
+add_wwpn_host =
+ 
+create_volume =
+ 
+expand_volume =
+ 
+get_diskgrp_info =
+get_host_info =
+get_volume_info =
+
+map_volume =
+reconfig_type_host =
+ 
+regist_host =
+regist_sshkey =
+regist_user_sshkey =
+ 
+remove_host =
+remove_map_volume =
+remove_volume =
+remove_wwpn_host =
+
+## set vg dir
+[vg]
+lvm_alter_lv =
+lvm_create_lv =
+lvm_rm_lv =
+vgm_alter_vg =
+vgm_create_vg =
+vgm_delete_vg =
+vgm_get_info =
 
 
-
-
-
-
-
-
-
-
-##  set shell script args
+################# set shell script args ####################
 [shell]
-get_host_info.sh=172.24.23.38@padmin
-get_vg_info.sh=172.24.23.38@padmin@rootvg
+get_host_info.sh = 172.24.23.38@padmin
+get_vg_info.sh = 172.24.23.38@padmin@rootvg
