--- a/etc/pdserver.conf
+++ b/etc/pdserver.conf
@@ -1,18 +1,174 @@
-## get host info
+## get host info group
 [getinfo]
-pv=get_pv_info.sh
-vg=get_vg_info.sh
-vm=get_vm_info.sh
-vm_v2.0=get_vm_info_v2.0.sh
-vm_state=get_vm_state.sh
-host=get_host_info.sh
+host = get_host_info.sh
 
-## set vm info
+pv = get_pv_info.sh
+pv_v2.0 = get_pv_info_v2.0.sh
+
+vg = get_vg_info.sh
+vg_v2.0 = get_vg_info_v2.0.sh
+
+vm = get_vm_info.sh
+vm_v2.0 = get_vm_info_v2.0.sh
+vm_state = get_vm_state.sh
+vm_net_topology = get_vm_net_topology_info.sh
+
+tmp = get_tmp_info.sh
+tmp_v2.0 = get_tmp_info_v2.0.sh
+
+vios = get_vios_info.sh
+vios_passwort = get_vios_passwort.sh
+
+lu_map = get_lu_map_info.sh
+
+## set vm info group
 [createvm]
-vm=create_vm.sh
+vm = create_vm.sh
 
-
-## ivm create vm 
+## ivm create vma group 
 [ivmcreate]
-vm=ivm_create_vm_v2.0.sh
-vm_iso=ivm_create_vm_iso_v2.0.sh
+vm = ivm_create_vm_v2.0.sh
+vm_iso  = ivm_create_vm_iso_v2.0.sh
+
+ivm_chsyscfg_auto_start_v2.0.sh
+ivm_create_tmp_cfg_v2.0.sh
+ivm_create_vm_cache.sh
+ivm_create_vm_iso_npiv.sh
+ivm_get_dlpar_state.sh
+ivm_get_opt_dev_info_v2.0.sh
+ivm_migrate_active.sh
+ivm_migrate_active_validate.sh
+ivm_mount_iso_v2.0.sh
+ivm_mount_nfs.sh
+ivm_remove_vol.sh
+ivm_shutdown_vios_v2.0.sh
+ivm_unmount_iso_v2.0.sh
+ivm_unmount_nfs.sh
+ivm_vm_add_eth.sh
+ivm_vm_add_vol.sh
+ivm_vm_convert_tmp_v2.0.sh
+ivm_vm_convert_tmp_v2.1.sh
+ivm_vm_del_eth.sh
+ivm_vm_detach_vol.sh
+ivm_vm_rebuild_lu.sh
+ivm_vm_rebuild_pv.sh
+ivm_vm_ref_eth.sh
+ivm_vm_remove_vol.sh
+
+
+
+
+################ set client in dir ##################
+## set npiv dir 
+[npiv]
+get_fc_info = ivm_get_fc_info.sh
+vm_add_vfc = ivm_vm_add_vfc.sh
+vm_del_vfc = ivm_vm_del_vfc.sh
+vm_mapping_vfc = ivm_vm_mapping_vfc.sh
+
+## set powerLinux dir
+[powerLinux]
+mount_nfs = ivm_mount_nfs.sh
+unmount_nfs = ivm_unmount_nfs.sh
+
+## set  softWareInstall dir
+[softWareInstall]
+backup_server_xml = pd_ivm_backup_server_xml.sh
+
+create_server = pd_ivm_create_server.sh
+delete_server = pd_ivm_delete_server.sh
+
+
+get_liberty_state = pd_ivm_get_liberty_state.sh
+get_server_xml_info = pd_ivm_get_server_xml_info.sh
+get_software_info = pd_ivm_get_software_info.sh
+get_vm_os_info = pd_ivm_get_vm_os_info.sh
+
+install_ae = pd_ivm_install_ae.sh
+install_agent = pd_ivm_install_agent.sh
+install_dlpar = pd_ivm_install_dlpar.sh
+install_liberty = pd_ivm_install_liberty.sh
+install_software = pd_ivm_install_software.sh
+
+start_liberty = pd_ivm_start_liberty.sh
+stop_liberty = pd_ivm_stop_liberty.sh
+
+deploy_liberty_apps = pd_ivm_deploy_liberty_apps.sh
+undeploy_liberty_apps = pd_ivm_undeploy_liberty_apps.sh
+
+uninstall_ae = pd_ivm_uninstall_ae.sh
+uninstall_agent = pd_ivm_uninstall_agent.sh
+uninstall_dlpar = pd_ivm_uninstall_dlpar.sh
+uninstall_liberty = pd_ivm_uninstall_liberty.sh
+uninstall_software = pd_ivm_uninstall_software.sh
+
+upload_server_xml = pd_ivm_upload_server_xml.sh
+
+
+## set ssp dir
+[ssp]
+alter_add_disk = ivm_ssp_alter_add_disk.sh
+alter_add_node = ivm_ssp_alter_add_node.sh
+alter_lu = ivm_ssp_alter_lu.sh
+
+rm_node = ivm_ssp_alter_rm_node.sh
+
+create_cluster = ivm_ssp_create_cluster.sh
+create_lu = ivm_ssp_create_lu.sh
+
+get_info_less = ivm_ssp_get_info_less.sh
+get_info = ivm_ssp_get_info.sh
+
+rm_lu = ivm_ssp_rm_lu.sh
+
+## set netmgr dir
+[netmgr]
+create_ethernet_channel = ivm_create_ethernet_channel.sh
+create_sea = ivm_create_sea.sh
+create_virtual_eth = ivm_create_virtual_eth.sh
+delete_ethernet_channel = ivm_delete_ethernet_channel.sh
+delete_sea = ivm_delete_sea.sh
+delete_virtual_eth = ivm_delete_virtual_eth.sh
+modify_ethernet_channel = ivm_modify_ethernet_channel.sh
+modify_sea = ivm_modify_sea.sh
+modify_virtual_eth = ivm_modify_virtual_eth.sh
+net_manager_refresh_new = ivm_net_manager_refresh_new.sh
+net_manager_refresh = ivm_net_manager_refresh.sh
+sea = sea.sh
+
+## set SVCstorage dir
+[SVCstorage]
+add_wwpn_host = pd_svc_add_wwpn_host.sh
+
+create_volume = pd_svc_create_volume.sh
+
+expand_volume = pd_svc_expand_volume.sh
+
+get_diskgrp_info = pd_svc_get_diskgrp_info.sh
+get_host_info = pd_svc_get_host_info.sh
+get_volume_info = pd_svc_get_volume_info.sh
+
+map_volume = pd_svc_map_volume.sh
+reconfig_type_host = pd_svc_reconfig_type_host.sh
+
+regist_host = pd_svc_regist_host.sh
+#regist_sshkey = pd_svc_regist_sshkey.exp
+regist_sshkey = pd_svc_regist_sshkey.sh
+#pd_svc_regist_user_sshkey.exp
+regist_user_sshkey = pd_svc_regist_user_sshkey.sh
+
+remove_host = pd_svc_remove_host.sh
+remove_map_volume = pd_svc_remove_map_volume.sh
+remove_volume = pd_svc_remove_volume.sh
+remove_wwpn_host = pd_svc_remove_wwpn_host.sh
+
+
+## set vg dir
+[vg]
+lvm_alter_lv = ivm_lvm_alter_lv.sh
+lvm_create_lv = ivm_lvm_create_lv.sh
+lvm_rm_lv = ivm_lvm_rm_lv.sh
+vgm_alter_vg = ivm_vgm_alter_vg.sh
+vgm_create_vg = ivm_vgm_create_vg.sh
+vgm_delete_vg = ivm_vgm_delete_vg.sh
+vgm_get_info = ivm_vgm_get_info.sh
